tests/Checker/everything/errors/16a.vc
int main() {
    int a[3] = {1, 2, 3, 4};
    return 1;
}
